content/_generated-doc/2.16/config/quarkus-opentelemetry.adoc

:summaryTableId: quarkus-opentelemetry
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-opentelemetry_configuration]]link:#quarkus-opentelemetry_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.opentelemetry.enabled]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.enabled[quarkus.opentelemetry.enabled]`

[.description]
--
OpenTelemetry support. 
OpenTelemetry support is enabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.opentelemetry.propagators]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.propagators[quarkus.opentelemetry.propagators]`

[.description]
--
Comma separated list of OpenTelemetry propagators which must be supported. 
Valid values are `b3, b3multi, baggage, jaeger, ottrace, tracecontext, xray`. 
Default value is `traceContext,baggage`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_PROPAGATORS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_PROPAGATORS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`tracecontext,baggage`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.enabled]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.enabled[quarkus.opentelemetry.tracer.enabled]`

[.description]
--
Support for tracing with OpenTelemetry. 
Support for tracing will be enabled if OpenTelemetry support is enabled and either this value is true, or this value is unset.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.resource-attributes]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.resource-attributes[quarkus.opentelemetry.tracer.resource-attributes]`

[.description]
--
A comma separated list of name=value resource attributes that represents the entity producing telemetry (eg. `service.name=authservice`).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_RESOURCE_ATTRIBUTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_RESOURCE_ATTRIBUTES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.sampler]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.sampler[quarkus.opentelemetry.tracer.sampler]`

[.description]
--
The sampler to use for tracing. 
Valid values are `off, on, ratio`. 
Defaults to `on`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_SAMPLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_SAMPLER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`on`


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.sampler.ratio]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.sampler.ratio[quarkus.opentelemetry.tracer.sampler.ratio]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_SAMPLER_RATIO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_SAMPLER_RATIO+++`
endif::add-copy-button-to-env-var[]
--|double 
|


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.sampler.parent-based]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.sampler.parent-based[quarkus.opentelemetry.tracer.sampler.parent-based]`

[.description]
--
If the sampler to use for tracing is parent based. 
Valid values are `true, false`. 
Defaults to `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_SAMPLER_PARENT_BASED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_SAMPLER_PARENT_BASED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.suppress-non-application-uris]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.suppress-non-application-uris[quarkus.opentelemetry.tracer.suppress-non-application-uris]`

[.description]
--
Suppress non-application uris from trace collection. This will suppress tracing of `/q` endpoints. 
Suppressing non-application uris is enabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_SUPPRESS_NON_APPLICATION_URIS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_SUPPRESS_NON_APPLICATION_URIS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.include-static-resources]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.include-static-resources[quarkus.opentelemetry.tracer.include-static-resources]`

[.description]
--
Include static resources from trace collection. 
Include static resources is disabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_INCLUDE_STATIC_RESOURCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_INCLUDE_STATIC_RESOURCES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.enabled]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.enabled[quarkus.opentelemetry.tracer.exporter.otlp.enabled]`

[.description]
--
OTLP SpanExporter support. 
OTLP SpanExporter support is enabled by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.endpoint]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.endpoint[quarkus.opentelemetry.tracer.exporter.otlp.endpoint]`

[.description]
--
The OTLP endpoint to connect to. The endpoint must start with either http:// or https://.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.headers]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.headers[quarkus.opentelemetry.tracer.exporter.otlp.headers]`

[.description]
--
Key-value pairs to be used as headers associated with gRPC requests. The format is similar to the `OTEL_EXPORTER_OTLP_HEADERS` environment variable, a list of key-value pairs separated by the "=" character. See link:https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/protocol/exporter.md#specifying-headers-via-environment-variables[Specifying headers] for more details.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.export-timeout]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.export-timeout[quarkus.opentelemetry.tracer.exporter.otlp.export-timeout]`

[.description]
--
The maximum amount of time to wait for the collector to process exported spans before an exception is thrown. A value of `0` will disable the timeout: the exporter will continue waiting until either exported spans are processed, or the connection fails, or is closed for some other reason.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_EXPORT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_EXPORT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.compression]]`link:#quarkus-opentelemetry_quarkus.opentelemetry.tracer.exporter.otlp.compression[quarkus.opentelemetry.tracer.exporter.otlp.compression]`

[.description]
--
Compression method to be used by exporter to compress the payload. 
See link:https://github.com/open-telemetry/opentelemetry-specification/blob/main/specification/protocol/exporter.md#opentelemetry-protocol-exporter[Configuration Options] for the supported compression methods.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
